[package]
name = "http-server-compare"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "http-thread"
path = "src/http-thread.rs"

[[bin]]
name = "http-tokio"
path = "src/http-tokio.rs"

[[bin]]
name = "http-async-std"
path = "src/http-async-std.rs"

[[bin]]
name = "http-stop-tokio"
path = "src/http-stop-tokio.rs"

[[bin]]
name = "http-stop2-tokio"
path = "src/http-stop2-tokio.rs"

[[bin]]
name = "http-stop2-async-std"
path = "src/http-stop2-async-std.rs"

[dependencies]
futures = "0.3.14"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[dependencies.tokio]
version = "1.5.0"
features = ["full"]
